@@ -1,6 +1,6 @@
 Package: Rlabkey
 Version: 2.2.3
-Date: 2018-09-02
+Date: 2018-09-21
 Title: Data Exchange Between R and 'LabKey' Server
 Author: Peter Hussey 
 Maintainer: Cory Nathe <cnathe@labkey.com>
